Fix selected tab style not showing

--- a/styles/Content.module.css
+++ b/styles/Content.module.css
@@ -8,10 +8,20 @@
 /* Tab styling */
 .activeTab {
     background: #fff;
-    border-color: #000;
+    border: 1px solid #000;
+    border-bottom: none;
 }
 .tabList {
     border-bottom: 1px solid #000;
     margin: 0 0 10px;
     padding: 0;
+}
+.tab {
+    display: inline-block;
+    border-bottom: none;
+    bottom: -1px;
+    position: relative;
+    list-style: none;
+    padding: 6px 12px;
+    cursor: pointer;
 }
